# alfred-system

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  MCP_PROXY_IMPLEMENTATION.md  README.md  docker-compose.yml
agent-core/: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pr_body.md  pyproject.toml  test_agent_cache.py  test_cache_simple.py  test_chat.json  test_docker_cache.py  test_github_cache_quick.py  test_hardening.py  test_notion_cache.py  test_notion_mcp_refresh.py  test_postgres_integration.py  test_sse_client.py  test_sse_stream.sh  test_time_cache.py
agent-core/ADRs/: .gitkeep
agent-core/docs/: README.md  cache-policy.md  context-strategy-v1.md  database-maintenance.md  database-schema.md  issue-23-implementation-plan.md  issue-24-implementation-plan.md  threads-implementation.md
agent-core/docs/reviews/: 2025-09-10-commit-21614fff-review.md
agent-core/migrations/: 003_cache_tags.sql
agent-core/src/: app.py  config.py  dev_seed.py  logging.py  simple_seed_test.py
agent-core/src/clients/: __init__.py  mcp_client.py  notion_mcp_client.py
agent-core/src/db/: __init__.py  alembic.ini  database.py  models.py  repositories.py  schema.sql  session.py
agent-core/src/middleware/: __init__.py  device_session.py  gzip_sse_safe.py  logging.py  rate_limiting.py  security.py  size_limits.py  timeout.py
agent-core/src/routers/: chat.py  device.py  health.py  oauth.py
agent-core/src/services/: agent_orchestrator.py  cache_service.py  device_session_service.py  mcp_router.py  oauth_manager.py  postgres_cache.py  rate_limiter.py  session_store.py  (+4 more)
agent-core/tests/: README.md  conftest.py  test_cache_service.py  test_chat_endpoint.py  test_config.py  test_device_sessions.py  test_health_endpoint.py  test_issue_25.py  test_mcp_router.py  test_postgres_cache.py  test_sse_streaming.py  test_sse_utils.py  test_threads_complete.py  test_threads_edge_cases.py
(+85 files in other folders)
